--- a/packages-isolated/mobile/android/app/src/main/res/values/strings.xml
+++ b/packages-isolated/mobile/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Polar</string>
+    <string name="app_name">Polar | Research, note-taking, and reading</string>
 </resources>
